Add epics exports
Former-commit-id: 4af1bc51331303363e5da78c82d31868bbcf2521

--- a/pugixmlApp/src/Makefile
+++ b/pugixmlApp/src/Makefile
@@ -9,7 +9,7 @@ include $(TOP)/configure/CONFIG
 # build a support library
 
 LIBRARY_IOC += pugixml
-INC += pugixml.hpp
+INC += pugixml.hpp pugiconfig.hpp
 
 # xxxRecord.h will be created from xxxRecord.dbd
 #DBDINC += xxxRecord
